<resources>
    <string name="app_name">HackRice2020</string>
    <string name="title_home">Home</string>
    <string name="title_trends">Trends</string>
    <string name="title_settings">Settings</string>
    <string name="title_history">History</string>
    <string name="title_links">History</string>
    <string name="button1">Graph 1</string>
    <string name="button2">Graph 2</string>
    <string name="button3">Graph 3</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Links -->
    <string name="linktosite">
        <a href="https://www.cdc.gov/">Click For More Information by the CDC</a>
    </string>

    <string name="linktosite1">
        <a href="https://www.who.int/">Click For More Information by the WHO</a>
    </string>

    <string name="linktosite2">
        <a href="https://www.hopkinsmedicine.org/health/conditions-and-diseases/coronavirus">Click For More Information by Johns Hopkins</a>
    </string>

    <!-- Trends -->
    <string name="trends">Trends</string>
</resources>