<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.hackrice2020.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.hackrice2020.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_trends"
        android:name="com.example.hackrice2020.ui.trends.TrendsFragment"
        android:label="@string/title_trends"
        tools:layout="@layout/fragment_trends" />

    <fragment
        android:id="@+id/navigation_links"
        android:name="com.example.hackrice2020.ui.links.LinksFragment"
        android:label="@string/title_links"
        tools:layout="@layout/fragment_links" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.hackrice2020.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>